# SortingHat

./: README.md  install_third_party_libs.sh
install_scripts/: install_fftw.sh  install_gmp.sh  install_ntl.sh
src/cpp_pdte_transciphering/: .gitignore  Makefile  filip.cpp  filip.h  homomorphic_filip.cpp  homomorphic_filip.h  node.cpp  node.h  test_filip.cpp  test_homomorphic_filip.cpp  test_node.cpp  test_pdte_transciphering.cpp  utils.cpp  utils.h  vectorutils.hpp
src/cpp_pdte_transciphering/data/breast_11bits/: x_test.csv  y_test.csv
src/cpp_pdte_transciphering/data/electricity_10bits/: model.json  x_test.csv  y_test.csv
src/cpp_pdte_transciphering/data/fake_art_16bits/: model.json
src/cpp_pdte_transciphering/data/fake_hou_16bits/: model.json
src/cpp_pdte_transciphering/data/phoneme_10bits/: model.json  x_test.csv  y_test.csv
src/cpp_pdte_transciphering/data/spam_11bits/: x_test.csv
src/cpp_pdte_transciphering/final/: FINAL.h
src/cpp_pdte_transciphering/final/include/: lwehe.h
src/rust_pdte/: .gitignore  Cargo.toml
src/rust_pdte/benches/: my_benchmark.rs
src/rust_pdte/data/breast/: model.json
src/rust_pdte/data/fake_art/: model.json
src/rust_pdte/data/fake_hou/: model.json
src/rust_pdte/data/heart/: model.json  x_test.csv  y_test.csv
src/rust_pdte/data/spam/: model.json  y_test.csv
src/rust_pdte/data/spam2/: model.json
src/rust_pdte/data/steel/: model.json  x_test.csv  y_test.csv
src/rust_pdte/script/: run_all_datasets.sh  train.py
src/rust_pdte/src/: decision_tree.rs  lib.rs  main.rs  rgsw.rs  rlwe.rs
(+1 files in other folders)
