[package]
name = "homdte"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
concrete-commons = "0.2.0"
concrete-core = { version = "1.0.0-beta" }
csv = "1.1"
rand = "0.8"
num-traits = "0.2"
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3", features = ["derive"] }
rayon = "1.5"
bitvec = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
